--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,10 @@ main section {
     padding: 2%;
 }
 
+.grid-container a {
+    text-decoration: none;
+}
+
 .grid-item {
     /*     border: 2px solid pink;
  */
